--- a/Public/Home/fe/loginBTC.html
+++ b/Public/Home/fe/loginBTC.html
@@ -62,7 +62,8 @@
     <script src="static/js/main.js"></script>
 </head>
 
-<body><div class="preloader">
+<body>
+<div class="preloader" style="display: none;">
     <div class="preloader-inner">
         <div class="preloader-icon">
             <span></span>
