--- a/Public/Home/fe/base/loader.html
+++ b/Public/Home/fe/base/loader.html
@@ -1,4 +1,4 @@
-<div class="preloader">
+<div class="preloader" style="display: none;">
     <div class="preloader-inner">
         <div class="preloader-icon">
             <span></span>
