--- a/Public/Home/fe/PETC.html
+++ b/Public/Home/fe/PETC.html
@@ -1,78 +1,84 @@
 <!doctype html>
 <html lang="zxx">
 
-<include file="./Public/Home/fe/base/head.html"/>
+<include file="./Public/Home/fe/base/head.html" />
 
 <body>
-<include file="./Public/Home/fe/base/loader.html"/>
+    <include file="./Public/Home/fe/base/loader.html" />
 
-<div class="site-content">
+    <div class="site-content">
 
-    <include file="./Public/Home/fe/base/nav.html"/>
+        <include file="./Public/Home/fe/base/nav.html" />
 
-    <div id="sticky-header"></div>
-    <div class="page-title-area bg-black"
-         style="background-image: url('__HOME__/fe/static/images/shape-dot1.png');padding-top:120px;">
-        <div class="shape-group">
-            <div class="shape"></div>
-            <div class="shape"></div>
-            <div class="shape"></div>
-            <div class="shape"></div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="page-header-content text-center">
-                        <div class="page-header-caption">
-                            <h2 class="page-title">PETC</h2>
-                        </div>
-                        <div class="breadcrumb-area">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"></li>
-                            </ol>
+        <div id="sticky-header"></div>
+        <div class="page-title-area bg-black" style="background-image: url('__CDN1__/fe/static/images/shape-dot1.png');padding-top:120px;">
+            <div class="shape-group">
+                <div class="shape"></div>
+                <div class="shape"></div>
+                <div class="shape"></div>
+                <div class="shape"></div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="page-header-content text-center">
+                            <div class="page-header-caption">
+                                <h2 class="page-title">PETC</h2>
+                            </div>
+                            <div class="breadcrumb-area">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container pd-t-50 text-white">
+            <div class="container pd-t-50 text-white">
 
-            <p>Petro Coin is a service platform which helps to quickly create, manage and maintain enterprise-level networks and commercial blockchain applications. It has features such as low development costs, fast deployment, high performance and strong scalability, security and reliability. Thus, Petro Coin system is a one-stop solution for developers or business with blockchain capabilities.</p>
+                <p>Petro Coin is a service platform which helps to quickly create, manage and maintain enterprise-level networks and commercial blockchain applications. It has features such as low development costs, fast deployment, high performance and
+                    strong scalability, security and reliability. Thus, Petro Coin system is a one-stop solution for developers or business with blockchain capabilities.</p>
 
-            <p>Petro Coin system’s original main-sidechain model and core system integrate and abstract the underlying blockchain network, consensus, application development capabilities, and blockchian supporting facilities into user-acceptable programmable interfaces and operating interfaces, shielding them. The underlying technical details make application development simpler and more efficient, and allow enterprises and developers to focus more on the development of the applications.</p>
+                <p>Petro Coin system’s original main-sidechain model and core system integrate and abstract the underlying blockchain network, consensus, application development capabilities, and blockchian supporting facilities into user-acceptable programmable
+                    interfaces and operating interfaces, shielding them. The underlying technical details make application development simpler and more efficient, and allow enterprises and developers to focus more on the development of the applications.</p>
 
-            <p>Petro Coin (PETC) is the only circulating asset in the ecosystem, with a total circulation of 100 million, reduces production once 2116800 blocks.</p>
+                <p>Petro Coin (PETC) is the only circulating asset in the ecosystem, with a total circulation of 100 million, reduces production once 2116800 blocks.</p>
 
-            <p>Total supply: 100,000,000 PETC</p>
+                <p>Total supply: 100,000,000 PETC</p>
 
-            <p>Total Subscription: 35,000,000 PETC</p>
+                <p>Total Subscription: 35,000,000 PETC</p>
 
-            <p>Private placement price: 0.15 USD</p>
+                <p>Private placement price: 0.15 USD</p>
 
-            <p>Subscription Time: 90 days</p>
-            <div class="row" style="z-index:9">
-                <div class="col-12 text-right pd-b-10">
-                    <a href="__HOME__/fe/static/file/ptc.docx" target="_blank" class="btn btn-default btn-primary">
-                        <i class="fa fa-fw fa-book"></i> White book
-                    </a>
+                <p>Subscription Time: 90 days</p>
+                <div class="row" style="z-index:9">
+                    <div class="col-12 text-right pd-b-10">
+                        <a href="__CDN2__/fe/static/file/ptc.docx" target="_blank" class="btn btn-default btn-primary">
+                            <i class="fa fa-fw fa-book"></i> White book
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container pd-t-50">
-            <div class="row">
-                <div class="col-6 col-lg-2">Now : <h4 class="price_Close"></h4>
-                </div>
-                <div class="col-6 col-lg-2">change : <h4 class="price_Change"></h4>
-                </div>
-                <div class="col-6 col-lg-2">open : <h4 class="price_Open text-white"></h4>
-                </div>
-                <div class="col-6 col-lg-2">high : <h4 class="price_High text-white"></h4>
-                </div>
-                <div class="col-6 col-lg-2">low : <h4 class="price_Low text-white"></h4>
-                </div>
-                <div class="col-6 col-lg-2">
-                    <div class="form-group faqs-form-area">
-                        <select id="lineType" class="form-controller">
+            <div class="container pd-t-50">
+                <div class="row">
+                    <div class="col-6 col-lg-2">Now :
+                        <h4 class="price_Close"></h4>
+                    </div>
+                    <div class="col-6 col-lg-2">change :
+                        <h4 class="price_Change"></h4>
+                    </div>
+                    <div class="col-6 col-lg-2">open :
+                        <h4 class="price_Open text-white"></h4>
+                    </div>
+                    <div class="col-6 col-lg-2">high :
+                        <h4 class="price_High text-white"></h4>
+                    </div>
+                    <div class="col-6 col-lg-2">low :
+                        <h4 class="price_Low text-white"></h4>
+                    </div>
+                    <div class="col-6 col-lg-2">
+                        <div class="form-group faqs-form-area">
+                            <select id="lineType" class="form-controller">
                             <option value="1min">1min</option>
                             <option value="5min">5min</option>
                             <option value="15min">15min</option>
@@ -84,109 +90,105 @@
                             <option value="1mon">1month</option>
                             <option value="1year">1year</option>
                         </select>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12" id="chainChart" style="height:600px;"></div>
-            </div>
-        </div>
-    </div>
-    <div class="all_progress">
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                 style="width: 80%;">
-                800
-            </div>
-        </div>
-        <div class="progress_text">
-            <text class="time">1:00</text>
-            <text>
-                天使轮
-            </text>
-        </div>
-    </div>
-
-    <style>
-        .all_progress {
-            width: 50%;
-            margin: 30px auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .all_progress .progress {
-            width: 80%;
-        }
-    </style>
-    <script>
-        $(function () {
-            let t = 60;
-            setInterval(() => {
-                if (t <= 0) {
-                    $('.time').text(`1:00`);
-                    t = 60
-                }
-                t--;
-                $('.time').text(`0:${t}`)
-            }, 1000)
-
-        })
-    </script>
-    <div class="faqs-block pd-t-50 pd-b-50">
-        <div class="container">
-            <form method="post" action="" id="SellChainForm">
-                <div class="row">
-                    <input type="hidden" name="BuyChainID" value="20">
-                    <div class="col-12 col-lg-3">
-                        <div class="form-group">
-                            <label for="InviteCode">Invite Code</label>
-                            <input class="form-controller" name="InviteCode" id="InviteCode" value=""
-                                   placeholder="please type your invite code"/>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="form-group">
-                            <label for="SellChainID">Chain</label>
-                            <select name="SellChainID" id="SellChainID" class="form-controller">
+                </div>
+                <div class="row">
+                    <div class="col-12" id="chainChart" style="height:600px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="all_progress">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                    800
+                </div>
+            </div>
+            <div class="progress_text">
+                <text class="time">1:00</text>
+                <text>
+                天使轮
+            </text>
+            </div>
+        </div>
+
+        <style>
+            .all_progress {
+                width: 50%;
+                margin: 30px auto;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            
+            .all_progress .progress {
+                width: 80%;
+            }
+        </style>
+        <script>
+            $(function() {
+                let t = 60;
+                setInterval(() => {
+                    if (t <= 0) {
+                        $('.time').text(`1:00`);
+                        t = 60
+                    }
+                    t--;
+                    $('.time').text(`0:${t}`)
+                }, 1000)
+
+            })
+        </script>
+        <div class="faqs-block pd-t-50 pd-b-50">
+            <div class="container">
+                <form method="post" action="" id="SellChainForm">
+                    <div class="row">
+                        <input type="hidden" name="BuyChainID" value="20">
+                        <div class="col-12 col-lg-3">
+                            <div class="form-group">
+                                <label for="InviteCode">Invite Code</label>
+                                <input class="form-controller" name="InviteCode" id="InviteCode" value="" placeholder="please type your invite code" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class="form-group">
+                                <label for="SellChainID">Chain</label>
+                                <select name="SellChainID" id="SellChainID" class="form-controller">
                                 <option value="1" data-chain-name="USDT">USDT</option>
                                 <option value="18" data-chain-name="BTC">BTC</option>
                                 <option value="19" data-chain-name="ETH">ETH</option>
                             </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="form-group">
-                            <label for="SellChainQuantity">Quantity</label>
-                            <input type="number" step="0.00000001" class="form-controller" name="SellChainQuantity"
-                                   id="SellChainQuantity" value="0.00000000" placeholder="chain quantity">
+                        <div class="col-12 col-lg-3">
+                            <div class="form-group">
+                                <label for="SellChainQuantity">Quantity</label>
+                                <input type="number" step="0.00000001" class="form-controller" name="SellChainQuantity" id="SellChainQuantity" value="0.00000000" placeholder="chain quantity">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="form-group">
-                            <label for="canBuyChainQuantityInput">≈</label>
-                            <input type="text" class="form-controller canBuyChainQuantityInput" placeholder=""
-                                   readonly id="canBuyChainQuantityInput">
+                        <div class="col-12 col-lg-3">
+                            <div class="form-group">
+                                <label for="canBuyChainQuantityInput">≈</label>
+                                <input type="text" class="form-controller canBuyChainQuantityInput" placeholder="" readonly id="canBuyChainQuantityInput">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="form-group">
-                            <label> </label>
-                            <button type="submit" class="btn btn-block btn-primary"><i class="fa fa-check"></i>
+                        <div class="col-12 col-lg-3">
+                            <div class="form-group">
+                                <label> </label>
+                                <button type="submit" class="btn btn-block btn-primary"><i class="fa fa-check"></i>
                                 Buy
                             </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-    </div>
-    <script src="__HOME__/fe/static/js/echarts.min.js"></script>
-    <script src="__HOME__/fe/static/js/kline.js"></script>
+        <script src="__CDN2__/fe/static/js/echarts.min.js"></script>
+        <script src="__CDN2__/fe/static/js/kline.js"></script>
 
-    <include file="./Public/Home/fe/base/footer.html"/>
-</div>
+        <include file="./Public/Home/fe/base/footer.html" />
+    </div>
 </body>
 
 </html>
