--- a/Public/Home/fe/User_Chain.html
+++ b/Public/Home/fe/User_Chain.html
@@ -1,18 +1,16 @@
 <!doctype html>
 <html lang="zxx">
-<include file="./Public/Home/fe/base/head.html"/>
-    <link
-        href="__HOME__/fe/staticcss?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap"
-        rel="stylesheet">
+<include file="./Public/Home/fe/base/head.html" />
+<link href="__CDN2__/fe/staticcss?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap" rel="stylesheet">
 
 
 <body>
-<include file="./Public/Home/fe/base/loader.html"/>
+    <include file="./Public/Home/fe/base/loader.html" />
 
     <div class="site-content">
-        <include file="./Public/Home/fe/base/nav.html"/>
+        <include file="./Public/Home/fe/base/nav.html" />
         <div id="sticky-header"></div>
-        <div class="page-title-area bg-primary" style="background-image: url('__HOME__/fe/staticimages/shape/shape-dot1.png')">
+        <div class="page-title-area bg-primary" style="background-image: url('__CDN1__/fe/staticimages/shape/shape-dot1.png')">
             <div class="shape-group">
                 <div class="shape"></div>
                 <div class="shape"></div>
@@ -48,8 +46,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__HOME__/fe/static/picture/USDT.png" width="100"
-                                                class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/fe/static/picture/USDT.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -78,8 +75,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__HOME__/fe/static/picture/btc.png" width="100"
-                                                class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/fe/static/picture/btc.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -108,8 +104,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__HOME__/fe/static/picture/eth.png" width="100"
-                                                class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/fe/static/picture/eth.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -138,8 +133,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__HOME__/fe/static/picture/bdv.png" width="100"
-                                                class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/fe/static/picture/bdv.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -187,7 +181,7 @@
                 </div>
             </div>
         </div>
-        <include file="./Public/Home/fe/base/footer.html"/>
+        <include file="./Public/Home/fe/base/footer.html" />
     </div>
 </body>
 <script>
@@ -195,4 +189,5 @@
         layer.msg('Coming Soon!')
     }
 </script>
+
 </html>
