--- a/Public/Home/fe/terms.html
+++ b/Public/Home/fe/terms.html
@@ -11,7 +11,7 @@
         <include file="./Public/Home/fe/base/nav.html" />
 
         <div id="sticky-header"></div>
-        <div class="page-title-area bg-primary" style="background-image: url('__CDN1__/foreign_exchange/static/images/shape-dot1.png')">
+        <div class="page-title-area bg-primary" style="background-image: url('__CDN1__/Public/Home/foreign_exchange/static/images/shape-dot1.png')">
             <div class="shape-group">
                 <div class="shape"></div>
                 <div class="shape"></div>
@@ -48,7 +48,7 @@
                         <div class="page-info-content terams-conditions-content">
                             <div class="single-info-block">
                                 <h2 class="heading">SpaceFinEX Special Statement</h2>
-                                <p>Please ensure the security of the computer used for the transaction and flow of __CDN1__/foreign_exchange/assets.
+                                <p>Please ensure the security of the computer used for the transaction and flow of __CDN1__/Public/Home/foreign_exchange/assets.
                                 </p>
                                 <p>Based on the web page display and safety considerations, it is strongly recommended that users use the latest version of Google Chrome browser login SpaceFinEX.</p>
                                 <p>Responsible for any errors and loss of property caused by personal problems.</p>
@@ -61,7 +61,8 @@
                                     <p>SpaceFinEX will update this privacy policy from time to time. When you agree to the SpaceFinEX service agreement, it is deemed that you have agreed to the entire contents of this privacy policy.</p>
                                     <p>This privacy policy is an integral part of the SpaceFinEX service agreement.</p>
                                     <p>SpaceFinEX shall have the right to modify the terms of this agreement. Once the amended agreement is published, the original agreement shall be effectively replaced. The user may consult the latest agreement at any
-                                        time.</p>
+                                        time.
+                                    </p>
                                 </div>
                                 <!-- /.single-info-block-inner -->
                             </div>
