--- a/Public/Home/fe/User_Chain.html
+++ b/Public/Home/fe/User_Chain.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
 <include file="./Public/Home/fe/base/head.html" />
-<link href="__CDN2__/fe/staticcss?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap" rel="stylesheet">
+<link href="__CDN2__/Public/Home/fe/staticcss?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap" rel="stylesheet">
 
 
 <body>
@@ -10,7 +10,7 @@
     <div class="site-content">
         <include file="./Public/Home/fe/base/nav.html" />
         <div id="sticky-header"></div>
-        <div class="page-title-area bg-primary" style="background-image: url('__CDN1__/fe/staticimages/shape/shape-dot1.png')">
+        <div class="page-title-area bg-primary" style="background-image: url('__CDN1__/Public/Home/fe/staticimages/shape/shape-dot1.png')">
             <div class="shape-group">
                 <div class="shape"></div>
                 <div class="shape"></div>
@@ -46,7 +46,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__CDN1__/fe/static/picture/USDT.png" width="100" class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/Public/Home/fe/static/picture/USDT.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -75,7 +75,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__CDN1__/fe/static/picture/btc.png" width="100" class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/Public/Home/fe/static/picture/btc.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -104,7 +104,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__CDN1__/fe/static/picture/eth.png" width="100" class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/Public/Home/fe/static/picture/eth.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
@@ -133,7 +133,7 @@
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
                                         <div class="text-center">
-                                            <img src="__CDN1__/fe/static/picture/bdv.png" width="100" class="rounded-circle mb-4" />
+                                            <img src="__CDN1__/Public/Home/fe/static/picture/bdv.png" width="100" class="rounded-circle mb-4" />
                                         </div>
                                         <!--
                                             <div class="pricing-icon icon-default icon-green">
