--- a/Public/Home/fe/noLoginBTC.html
+++ b/Public/Home/fe/noLoginBTC.html
@@ -39,25 +39,25 @@
     <script src="static/js/modernizr.min.js"></script>
     <!-- All The JS Files
     ================================================== -->
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/popper.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/plugins.js"></script>
-    <script src="static/js/meanmenu.min.js"></script>
-    <script src="static/js/imagesloaded.pkgd.min.js"></script>
-    <script src="static/js/jquery.nice-select.min.js"></script>
-    <script src="static/js/theia-sticky-sidebar.min.js"></script>
-    <script src="static/js/resizesensor.min.js"></script>
-    <script src="static/js/owl.carousel.min.js"></script>
-    <script src="static/js/lightcase.js"></script>
-    <script src="static/js/simple-scrollbar.min.js"></script>
-    <script src="static/js/scrolla.jquery.min.js"></script>
-    <script src="static/js/odometer.min.js"></script>
-    <script src="static/js/isinviewport.jquery.js"></script>
-    <script src="static/js/circle-progress.min.js"></script>
-    <script src="static/js/chartist.min.js"></script>
-    <script src="static/js/chartistpoint.js"></script>
-    <script src="static/js/toastr.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/jquery.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/popper.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/bootstrap.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/plugins.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/meanmenu.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/imagesloaded.pkgd.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/jquery.nice-select.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/theia-sticky-sidebar.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/resizesensor.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/owl.carousel.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/lightcase.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/simple-scrollbar.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/scrolla.jquery.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/odometer.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/isinviewport.jquery.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/circle-progress.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/chartist.min.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/chartistpoint.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/toastr.min.js"></script>
     <!-- main-js -->
     <script src="static/js/main.js"></script>
 </head>
@@ -222,7 +222,7 @@
                 t--;
                 $('.time').text(`0:${t}`)
           },1000)
-            
+
         })
     </script>
 
@@ -282,9 +282,9 @@
                                 <div class="about-loga">
                                     <img src="static/picture/footer-logo.png" alt="Logo">
                                 </div>
-				<p>We fully understand and respect the privacy to you, 
-                                 and we will adopt corresponding appropriate safety 
-                                protection measures to protect your privacy in accordance 
+				<p>We fully understand and respect the privacy to you,
+                                 and we will adopt corresponding appropriate safety
+                                protection measures to protect your privacy in accordance
                                 with the requirements of the applicable laws and regulations.</p>
                                 <div class="call-info">
                                     <h4 class="title">Contact Us</h4>
