--- a/Public/Home/fe/warning01.html
+++ b/Public/Home/fe/warning01.html
@@ -45,12 +45,12 @@
     }
     showTime();
 </script>
-<script src="static/js/jquery.min.js"></script>
-<script src="static/js/popper.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
-<script src="static/js/jquery.nicescroll.min.js"></script>
-<script src="static/js/moment.min.js"></script>
-<script src="static/js/stisla.js"></script>
+<script src="__CDN2__/Public/Home/fe/static/js/jquery.min.js"></script>
+<script src="__CDN2__/Public/Home/fe/static/js/popper.min.js"></script>
+<script src="__CDN2__/Public/Home/fe/static/js/bootstrap.min.js"></script>
+<script src="__CDN2__/Public/Home/fe/static/js/jquery.nicescroll.min.js"></script>
+<script src="__CDN2__/Public/Home/fe/static/js/moment.min.js"></script>
+<script src="__CDN2__/Public/Home/fe/static/js/stisla.js"></script>
 <!-- JS Libraies -->
 <!-- Template JS File -->
 <script src="static/js/scripts.js"></script>
