Updating several image issue

--- a/Public/Home/fe/index.html
+++ b/Public/Home/fe/index.html
@@ -163,19 +163,19 @@
                                 <img src="__CDN1__/Public/Home/fe/static/images/BTC.png" alt="BTC">
                             </a>
                             <a href="/index/chart?name=ETH" class="brands-link">
-                                <img src="https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/images/ETH.png" alt="ETH">
+                                <img src="__CDN1__/Public/Home/fe/static/images/ETH.png" alt="ETH">
                             </a>
                             <a href="/index/chart?name=BCH" class="brands-link">
-                                <img src="https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/images/BCH.png" alt="BCH">
+                                <img src="__CDN1__/Public/Home/fe/static/images/BCH.png" alt="BCH">
                             </a>
                             <a href="/index/chart?name=LTC" class="brands-link">
-                                <img src="https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/images/LTC.png" alt="LTC">
+                                <img src="__CDN1__/Public/Home/fe/static/images/LTC.png" alt="LTC">
                             </a>
                             <a href="/index/chart?name=FEC" class="brands-link">
-                                <img src="https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/images/FEC.png" alt="BDV">
+                                <img src="__CDN1__/Public/Home/fe/static/images/FEC.png" alt="BDV">
                             </a>
                             <a href="/index/chart?name=EOS" class="brands-link">
-                                <img src="https://d16madtmbsmyfy.cloudfront.net/Public/Home/fe/static/images/LTC.png" alt="EOS">
+                                <img src="__CDN1__/Public/Home/fe/static/images/LTC.png" alt="EOS">
                             </a>
                         </div>
                     </div>
