--- a/Public/Home/fe/base/head.html
+++ b/Public/Home/fe/base/head.html
@@ -14,7 +14,7 @@
     <title>SpaceFinEX</title>
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="__CDN1__/favicon.ico">
     <link rel="apple-touch-icon" sizes="72x72" href="__CDN1__/Public/Home/fe/assets/images/">
     <link rel="apple-touch-icon" sizes="114x114" href="__CDN1__/Public/Home/fe/assets/images/">
     <!-- Custom Font
