--- a/Public/Home/fe/loginBTC.html
+++ b/Public/Home/fe/loginBTC.html
@@ -17,7 +17,7 @@
     <title>BTC</title>
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="static/images/favicon.ico">
+    <link rel="shortcut icon" href="__CDN1__/favicon.ico">
     <link rel="apple-touch-icon" sizes="72x72" href="static/images/">
     <link rel="apple-touch-icon" sizes="114x114" href="static/images/">
     <!-- Custom Font
@@ -25,18 +25,18 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap" rel="stylesheet">
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="static/css/meanmenu.min.css">
-    <link rel="stylesheet" href="static/css/simple-scrollbar.css">
-    <link rel="stylesheet" href="static/css/odometer-theme-default.css">
-    <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
-    <link rel="stylesheet" href="static/css/lightcase.css">
-    <link rel="stylesheet" href="static/css/chartist.css">
-    <link rel="stylesheet" href="static/css/flaticon.css">
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="static/modules/toastr.js/latest/toastr.min.css">
-    <script src="static/js/modernizr.min.js"></script>
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/meanmenu.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/simple-scrollbar.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/odometer-theme-default.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/fontawesome.all.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/lightcase.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/chartist.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/flaticon.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/style.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/modules/toastr.js/latest/toastr.min.css">
+    <script src="__CDN2__/Public/Home/fe/static/js/modernizr.min.js"></script>
     <!-- All The JS Files
     ================================================== -->
     <script src="__CDN2__/Public/Home/fe/static/js/jquery.js"></script>
