--- a/Public/Home/fe/noLoginBTC.html
+++ b/Public/Home/fe/noLoginBTC.html
@@ -17,26 +17,26 @@
     <title>BTC</title>
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="__CDN1__/favicon.ico">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/">
     <link rel="apple-touch-icon" sizes="114x114" href="assets/images/">
     <!-- Custom Font
     ================================================== -->
-    <link href="static/css/37c285f22f144c3dbeedf0496b170a6c.css" rel="stylesheet">
+    <link href="__CDN2__/Public/Home/fe/static/css/37c285f22f144c3dbeedf0496b170a6c.css" rel="stylesheet">
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="static/css/meanmenu.min.css">
-    <link rel="stylesheet" href="static/css/simple-scrollbar.css">
-    <link rel="stylesheet" href="static/css/odometer-theme-default.css">
-    <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
-    <link rel="stylesheet" href="static/css/lightcase.css">
-    <link rel="stylesheet" href="static/css/chartist.css">
-    <link rel="stylesheet" href="static/css/flaticon.css">
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="static/css/toastr.min.css">
-    <script src="static/js/modernizr.min.js"></script>
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/meanmenu.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/simple-scrollbar.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/odometer-theme-default.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/fontawesome.all.min.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/lightcase.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/chartist.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/flaticon.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/style.css">
+    <link rel="stylesheet" href="__CDN2__/Public/Home/fe/static/css/toastr.min.css">
+    <script src="__CDN2__/Public/Home/fe/static/js/modernizr.min.js"></script>
     <!-- All The JS Files
     ================================================== -->
     <script src="__CDN2__/Public/Home/fe/static/js/jquery.js"></script>
@@ -59,7 +59,7 @@
     <script src="__CDN2__/Public/Home/fe/static/js/chartistpoint.js"></script>
     <script src="__CDN2__/Public/Home/fe/static/js/toastr.min.js"></script>
     <!-- main-js -->
-    <script src="static/js/main.js"></script>
+    <script src="__CDN2__/Public/Home/fe/static/js/main.js"></script>
 </head>
 
 <body>
