--- a/Public/Home/fe/User_Chain.html
+++ b/Public/Home/fe/User_Chain.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
 <include file="./Public/Home/fe/base/head.html" />
-<link href="__CDN3__/Public/Home/fe/staticcss?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap" rel="stylesheet">
+<link href="./Public/Home/fe/staticcss?family=Josefin+Sans:300,400,600,700%7COpen+Sans:300,400,600,700&display=swap" rel="stylesheet">
 
 
 <body>
