--- a/Public/Home/fe/userRegister.html
+++ b/Public/Home/fe/userRegister.html
@@ -108,7 +108,7 @@
                                     <label>
                                         <input name="agree" type="checkbox" checked="false">
                                         <span>
-                                                I agree to the 
+                                                I agree to the
                                                 <a href="/index/terms.html">Terms, Privacy policy and fees</a>
                                             </span>
                                     </label>
@@ -184,10 +184,10 @@
                     layer.msg('email is empty');
                     return false;
                 }
-                // if (code == '') {
-                //     layer.msg('invite code is empty');
-                //     return false;
-                // }
+                if (code == '') {
+                    layer.msg('invite code is empty');
+                    return false;
+                }
                 if (emailCode == '') {
                     layer.msg('email verify code is empty');
                     return false;
