Update look of the coin display page

--- a/Public/Home/fe/depositU.html
+++ b/Public/Home/fe/depositU.html
@@ -50,7 +50,7 @@
                             <div class="subtitle" data-animate="hg-fadeInUp">if you want to deposit</div>
                             <h2 class="title-main" data-animate="hg-fadeInUp">{$currencyName}</h2><!-- /.title-main -->
                             <div class="title-text" data-animate="hg-fadeInUp">you must copy this wallet address and
-                                send {$currencyName} to this wallet address. Current we can only accept ERC20 USDT</div><!-- /.title-text -->
+                                send {$currencyName} to this wallet address.\n Current we can only accept ERC20 USDT</div><!-- /.title-text -->
                         </div>
                         <div class="text-center">
                             <img style="" src='/Public/Uploads/{$rightAddress}.png'>
