Updating email address

--- a/Public/Home/fe/User.html
+++ b/Public/Home/fe/User.html
@@ -49,7 +49,7 @@
                                     <ul class="info-menu">
                                         <li>
                                             <button class="btn btn-default btn-xs" style="font-size: 13px;" type="button">
-                                            <a href="mailto:SpaceFinEX@gmail.com">Contact Us</a>
+                                            <a href="mailto:support@spacefinex.com">Contact Us</a>
                                         </button>
                                         </li>
                                         <li><a href="#"><span class="flaticon-fullscreen"></span></a></li>
