--- a/Public/Home/fe/base/footer.html
+++ b/Public/Home/fe/base/footer.html
@@ -32,7 +32,7 @@
                             <p>We fully understand and respect the privacy to you, and we will adopt corresponding appropriate safety protection measures to protect your privacy in accordance with the requirements of the applicable laws and regulations.</p>
                             <div class="call-info">
                                 <h4 class="title">Contact Us</h4>
-                                <p>SpaceFinEX@gmail.com</p>
+                                <p>Support@spacefinex.com</p>
                             </div>
                         </div>
                     </aside>
