Adding warning notice

--- a/Public/Home/fe/User.html
+++ b/Public/Home/fe/User.html
@@ -75,6 +75,14 @@
                                 </div>
                             </div>
 
+                            <div class="row notice pd-t-50">
+                              <div class="account-user-info">
+                                <div class="notice-content">
+                                  All Crypto address will be recycled in 4 hours for security purpose.<br>Your balance will be safely handled by SpaceFinex's hot wallet.<br>Please do not store old addresses for deposit purpose.
+                                </div>
+                              </div>
+                            </div>
+
                             <div class="row pricing-table-list pd-t-50">
                                 <div class="col-lg-6">
                                     <div class="pricing-box pricing-green" data-animate="hg-fadeInUp">
