--- a/Public/Home/fe/User.html
+++ b/Public/Home/fe/User.html
@@ -78,7 +78,7 @@
                             <div class="row notice pd-t-50" style="padding-left: 15px;">
                               <div class="account-user-info" style="width: 100%;">
                                 <div class="notice-content" style="text-align: center;margin-left: auto;margin-right: auto;color: red;">
-                                  All Crypto address will be recycled in 4 hours for security purpose.<br>Your balance will be safely handled by SpaceFinex's hot wallet.<br>Please <strong>DO NOT</strong> store old addresses for deposit purpose.
+                                  All crypto addresses will be recycled in 4 hours for security purpose.<br>Your balance will be safely handled by SpaceFinex's hot wallet.<br>Please <strong>DO NOT</strong> store old addresses for deposit purpose.
                                 </div>
                               </div>
                             </div>
