--- a/Public/Home/fe/index.html
+++ b/Public/Home/fe/index.html
@@ -179,9 +179,10 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="section-title">
-                            <div class="subtitle" data-animate="hg-fadeInUp">HOT CHAINS
+                    <div class="col-lg-6 brand-list">
+			<div class="fx-home-best-choice">
+			    <!-- <div class="section-title">  -->
+                            <div class="subtitle" data-animate="hg-fadeInUp">
                             </div>
                             <h2 class="title-main" data-animate="hg-fadeInUp">Best Choice</h2>
                             <!-- /.title-main -->
